@@ -353,6 +353,8 @@ gwlib/pki.c -text
 gwlib/pki.h -text
 gwlib/protected.c -text
 gwlib/protected.h -text
+gwlib/regex.c -text
+gwlib/regex.h -text
 gwlib/semaphore.c -text
 gwlib/semaphore.h -text
 gwlib/socket.c -text
@@ -422,6 +424,7 @@ test/test_pdu.c -text
 test/test_ppg.c -text
 test/test_radius_acct.c -text
 test/test_radius_pdu.c -text
+test/test_regex.c -text
 test/test_si.c -text
 test/test_sl.c -text
 test/test_smsc.c -text
