@@ -97,7 +97,7 @@ dnl Checks for header files.
 
 AC_HEADER_STDC
 AC_CHECK_HEADERS(sys/ioctl.h sys/time.h sys/types.h unistd.h sys/poll.h)
-AC_CHECK_HEADERS(pthread.h getopt.h syslog.h iconv.h)
+AC_CHECK_HEADERS(pthread.h getopt.h syslog.h iconv.h regex.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 
@@ -110,6 +110,7 @@ AC_TRY_COMPILE(, [char *func = __func__;],
 dnl Checks for library functions.
 
 AC_CHECK_FUNCS(gettimeofday select socket strdup getopt_long localtime_r gmtime_r)
+AC_CHECK_FUNCS(regcomp regexec)
 AC_CHECK_FUNC(getopt, , LIBOBJS="$LIBOBJS utils/attgetopt.o")
 AC_SUBST(LIBOBJS)
 
